correcao do primeiro exercicio de bootstrap onebitcode

--- a/html-css-js/bootstrap/exercicio1-bootstrap-onebitcode/style.css
+++ b/html-css-js/bootstrap/exercicio1-bootstrap-onebitcode/style.css
@@ -3,5 +3,5 @@
 }
 
 .background-img-container1 {
-  background: url(assets/pexels-kellie-churchman-371878-1001682.webp);
+  background: url(assets/pexels-kellie-churchman-371878-1001682.webp) bottom;
 }
